--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<header>
+<link rel="stylesheet" type="text/css" href="styles.css" />
+</header>
+<body>
 <main>
   <h1>Никита Михайлов</h1>
   <h2>Создатель профессии «Верстальщик» на Hexlet</h2>
@@ -24,3 +28,5 @@
     </p>
   </section>
 </main>
+  
+</body>
