--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 </header>
 <body>
 <main>
-  <h1>Никита Михайлов</h1>
-  <h2>Создатель профессии «Верстальщик» на Hexlet</h2>
+  <h1>Карпов Александр Сергеевич</h1>
+  <h2>Разработчик на многих технологиях</h2>
 
   <hr>
 
